# hybrid-retrieval-search-implementation

./: grading.py  pyproject.toml
Matryoshka embeddings/: main.py  sample_generator.py
rag_docs/: doc_0.txt  doc_1.txt  doc_10.txt  doc_100.txt  doc_101.txt  doc_102.txt  doc_103.txt  doc_104.txt  doc_105.txt  doc_106.txt  doc_107.txt  doc_108.txt  doc_109.txt  doc_11.txt  doc_110.txt  doc_111.txt  doc_112.txt  doc_113.txt  doc_114.txt  doc_115.txt  doc_116.txt  doc_117.txt  doc_118.txt  doc_119.txt  doc_12.txt  doc_120.txt  doc_121.txt  doc_122.txt  doc_123.txt  doc_124.txt  doc_125.txt  doc_126.txt  doc_127.txt  doc_128.txt  doc_129.txt  doc_13.txt  doc_130.txt  doc_131.txt  doc_132.txt  doc_133.txt  (+148 more)
